--- a/server/html/views/plugin.html
+++ b/server/html/views/plugin.html
@@ -70,6 +70,17 @@
             </label>
           </div>
         {{/if }}
+        {{#if (eq this.type 'dropdown' )}}
+          <div class="mb-6">
+            <label for="inp_{{ this.id }}" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-400">Select an option</label>
+            <select id="inp_{{ this.id }}" value="{{ this.value }}" id="countries" name="{{ this.inputName }}" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+              {{#each this.values}}
+                <option value="{{this.value}}" {{#if (eq ../value this.value ) }}selected{{/if}}>{{ this.label }}</option>
+              {{/each }}
+            </select>
+          </div>
+        {{/if }}
+
       {{/each}}
         <button class="text-white dark:text-gray-800 bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none
               focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0 dark:bg-green-400 dark:hover:bg-green-500 dark:focus:ring-green-800 flex items-center">
