warning -> alert to align with plugins

--- a/server/html/views/home.html
+++ b/server/html/views/home.html
@@ -207,7 +207,7 @@ services:
                 <p class="text-sm text-gray-500 truncate dark:text-gray-400">
                   {{ this.disk_used }}% used
                   {{#if disk_warning }}
-                    <span class="bg-pink-100 text-pink-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded dark:bg-pink-200 dark:text-pink-900">WARNING</span>
+                    <span class="bg-pink-100 text-pink-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded dark:bg-pink-200 dark:text-pink-900">ALERT</span>
                   {{else}}
                     <span class="bg-green-100 text-green-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded dark:bg-green-200 dark:text-green-900">OK</span>
                   {{/if}}
