--- a/server/html/views/home.html
+++ b/server/html/views/home.html
@@ -6,7 +6,7 @@
       {{#if authorized}}
       <form action="/api/add_monitor" method="POST">
         <button  class="text-white dark:text-gray-800 bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none
-            focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0 dark:bg-green-400 dark:hover:bg-green-500 dark:focus:ring-green-800 flex items-center">
+            focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center ml-10 mr-3 md:mr-0 dark:bg-green-400 dark:hover:bg-green-500 dark:focus:ring-green-800 flex items-center">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
             <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6m0 0v6m0-6h6m-6 0H6" />
           </svg>
@@ -199,6 +199,9 @@ services:
                   CPUs: {{ this.cpu_count }}
                   &nbsp;&nbsp;&nbsp;
                   RAM: {{ this.ram_total }} ({{ this.ram_used }}% used)
+                  {{#if this.ram_warning}}
+                    <span class="bg-pink-100 text-pink-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded dark:bg-pink-200 dark:text-pink-900">WARNING</span>
+                  {{/if}}
                   &nbsp;&nbsp;&nbsp;
                   {{#if this.isSwap }}
                   SWAP {{ this.swap_total }} ({{ this.swap_used }}% used)
