--- a/server/html/views/home.html
+++ b/server/html/views/home.html
@@ -242,6 +242,36 @@ services:
                   {{/if}}
                 </p>
               </td>
+              <td>
+                <svg xmlns="http://www.w3.org/2000/svg" id="dropdownDots-{{@index}}" data-dropdown-toggle="dropdownDotsInfo-{{@index}}" data-dropdown-placement="bottom-end" class="h-6 w-6 text-gray-700 dark:text-gray-800 cursor-pointer" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M12 5v.01M12 12v.01M12 19v.01M12 6a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z" />
+                </svg>
+                <div id="dropdownDotsInfo-{{@index}}" class="z-10 hidden w-max bg-white shadow text-sm font-medium text-white rounded-lg transition-opacity duration-300 dark:bg-gray-700">
+                    <button type="button" data-modal-toggle="modal_delete-{{@index}}" class="mx-5 my-2 text-red-600 hover:underline">Delete</button>
+                </div>
+
+                <div id="modal_delete-{{@index}}" tabindex="-1" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 md:inset-0 h-modal md:h-full">
+                  <div class="relative p-4 w-full max-w-md h-full md:h-auto">
+                      <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+                          <button type="button" class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-800 dark:hover:text-white" data-modal-toggle="modal_delete-{{@index}}">
+                              <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>  
+                          </button>
+                          <div class="p-6 text-center">
+                              <svg class="mx-auto mb-4 w-14 h-14 text-gray-400 dark:text-gray-200" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                              <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Are you sure you want to delete this host {{this.hostname}}?</h3>
+                              <div class="flex justify-center">
+                              <form action="/api/remove_host?id={{ this.id }}" method="post">
+                                <button data-modal-toggle="modal_delete-{{@index}}" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center mr-2">
+                                      Yes, I'm sure
+                                </button>
+                              </form>
+                              <button data-modal-toggle="modal_delete-{{@index}}" type="button" class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-200 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600">Cancel</button>
+                            </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              </td>
         </tr>
         {{/if}}
 
