fix alert duration time on client

--- a/server/html/views/home.html
+++ b/server/html/views/home.html
@@ -167,9 +167,9 @@ services:
                 {{#if this.online}}
                 🟢 On
                 {{else}}
-                <span data-tooltip-placement="bottom" data-tooltip-target="tooltip_online_alert">🔴 Off</span>
-                <div id="tooltip_online_alert" role="tooltip" class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 transition-opacity duration-300 tooltip dark:bg-gray-700">
-                  {{getDuration online_event_ts}}
+                <span data-tooltip-placement="bottom" data-tooltip-target="tooltip_online_alert-{{@index}}">🔴 Off</span>
+                <div id="tooltip_online_alert-{{@index}}" role="tooltip" class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 transition-opacity duration-300 tooltip dark:bg-gray-700">
+                  {{getDuration this.online_event_ts}}
                   <div class="tooltip-arrow" data-popper-arrow></div>
                 </div>
                 {{/if}}
@@ -211,7 +211,7 @@ services:
                   &nbsp;&nbsp;&nbsp;
                   RAM: {{ this.ram_total }} ({{ this.ram_used }}% used)
                   {{#if this.ram_warning}}
-                    <span data-tooltip-placement="bottom" data-tooltip-target="tooltip_ram_alert" class="bg-pink-100 text-pink-800 text-xs font-semibold px-2.5 py-0.5 rounded dark:bg-pink-200 dark:text-pink-900">ALERT</span>
+                    <span data-tooltip-placement="bottom" data-tooltip-target="tooltip_ram_alert-{{@index}}" class="bg-pink-100 text-pink-800 text-xs font-semibold px-2.5 py-0.5 rounded dark:bg-pink-200 dark:text-pink-900">ALERT</span>
                   {{/if}}
                   &nbsp;&nbsp;&nbsp;
                   {{#if this.isSwap }}
@@ -221,8 +221,8 @@ services:
                   {{/if}}
                 </p>
               </td>
-              <div id="tooltip_ram_alert" role="tooltip" class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 transition-opacity duration-300 tooltip dark:bg-gray-700">
-                {{getDuration ram_event_ts}}
+              <div id="tooltip_ram_alert-{{@index}}" role="tooltip" class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 transition-opacity duration-300 tooltip dark:bg-gray-700">
+                {{getDuration this.ram_event_ts}}
                 <div class="tooltip-arrow" data-popper-arrow></div>
               </div>
               <td class="flex-1 items-center text-base font-semibold text-gray-900 dark:text-white">
@@ -232,9 +232,9 @@ services:
                 <p class="text-sm text-gray-500 truncate dark:text-gray-400">
                   {{ this.disk_used }}% used
                   {{#if disk_warning }}
-                    <span data-tooltip-placement="bottom" data-tooltip-target="tooltip_disk_alert" class="bg-pink-100 text-pink-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded dark:bg-pink-200 dark:text-pink-900">ALERT</span>
-                    <div id="tooltip_disk_alert" role="tooltip" class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 transition-opacity duration-300 tooltip dark:bg-gray-700">
-                      {{getDuration disk_event_ts}}
+                    <span data-tooltip-placement="bottom" data-tooltip-target="tooltip_disk_alert-{{@index}}" class="bg-pink-100 text-pink-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded dark:bg-pink-200 dark:text-pink-900">ALERT</span>
+                    <div id="tooltip_disk_alert-{{@index}}" role="tooltip" class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 transition-opacity duration-300 tooltip dark:bg-gray-700">
+                      {{getDuration this.disk_event_ts}}
                       <div class="tooltip-arrow" data-popper-arrow></div>
                     </div>
                   {{else}}
