--- a/server/html/layouts/main.html
+++ b/server/html/layouts/main.html
@@ -6,6 +6,7 @@
   <link href="/css/output.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/flowbite.min.css" />
   <script src="/js/flowbite.js"></script>
+  <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
   <title>HotHost</title>
 
   <script>
