--- a/server/html/layouts/main.html
+++ b/server/html/layouts/main.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/css/output.css" rel="stylesheet">
-  <link rel="stylesheet" href="/css/flowbite.min.css" />
+  <link rel="stylesheet" href="/css/flowbite.min.css">
   <script src="/js/flowbite.js"></script>
   <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
   <title>HotHost</title>
