rework notification on save settings

--- a/server/html/views/plugin.html
+++ b/server/html/views/plugin.html
@@ -83,7 +83,7 @@
 
       {{/each}}
       <div class="flex items-center ">
-        <button type="submit" class="text-white dark:text-gray-800 bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none
+        <button id="save" type="button" onclick="onSubmit(notify = false)" class="text-white dark:text-gray-800 bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none
               focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0 dark:bg-green-400 dark:hover:bg-green-500 dark:focus:ring-green-800 flex items-center">
             {{#if pluginSettings.enabled}}
               Save settings
@@ -91,9 +91,15 @@
               Enable Plugin
             {{/if}}
         </button>
-        <span id="notification" class="invisible ml-4 text-red-500 transition-all">
-          Save & send test notification
-        </span>
+        <button id="save_notify" type="button" onclick="onSubmit(notify = true)"
+          class="text-white ml-4 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg
+          text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+            {{#if pluginSettings.enabled}}
+              Save & notify
+            {{else}}
+              Enable & notify
+            {{/if}}
+        </button>
       </div>
       </form>
     </div>
@@ -102,34 +108,66 @@
   </div>
 </div>
 
-
+<div id="toast-saved" class=" fixed right-2 bottom-2 hidden flex items-center w-full max-w-xs p-4 mb-4 text-gray-500 bg-white rounded-lg shadow dark:text-green-900 dark:bg-green-100" role="alert">
+  <div class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-green-500 bg-green-100 rounded-lg dark:bg-green-100 dark:text-green-900">
+      <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
+  </div>
+  <div class="ml-3 text-sm font-normal">Save & send text notification</div>
+  <button type="button" class="bg-transparent ml-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 inline-flex h-8 w-8 dark:text-green-900 dark:hover:text-black " onclick="hideToast()" aria-label="Close">
+      <span class="sr-only">Close</span>
+      <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+  </button>
+</div>
 
 <script>
-
-  function hideCOpyTost() {
-    document.getElementById('toast-copied').classList.add('hidden');
-  }
-
-  function copyToCb(idOfPre) {
-    const copyText = document.getElementById(idOfPre).textContent;
-    const textArea = document.createElement('textarea');
-    textArea.textContent = copyText;
-    document.body.append(textArea);
-    textArea.select();
-    document.execCommand("copy");
-    textArea.remove();
-    document.getElementById('toast-copied').classList.remove('hidden');
-    setTimeout(hideCOpyTost, 5000);
-
-  }
-
   const notification = document.getElementById('notification');
-  document.getElementById("plugin_form").onsubmit = function() {
-    notification.classList.toggle('invisible');
-    setTimeout(()=>{
-      window.location = "/plugins/"
-    },1000)
-  };
+  const plugin_form = document.getElementById("plugin_form");
+  const save = document.getElementById("save");
+  const save_notify = document.getElementById("save_notify");
+
+  function hideToast() {
+    document.getElementById('toast-saved').classList.add('hidden');
+  }
+
+  function showToast() {
+    document.getElementById('toast-saved').classList.remove('hidden');
+    setTimeout(hideToast, 5000);
+
+  }
+
+  async function postPlugin(data) {
+    const url = window.location.href;
+    const response = await fetch(url, {
+      method: 'POST',
+      mode: 'cors',
+      headers: {
+        'Content-Type': 'application/json',
+      },
+      body: JSON.stringify(data),
+      redirect: 'manual',
+    })}
+
+  const onSubmit = async (notify) => {
+    event.preventDefault();
+    const formData = new FormData(plugin_form);
+    const fromValues = Object.fromEntries(formData);
+
+    if (notify) {
+      fromValues.notify = true;
+    } else {
+      fromValues.notify = false;
+    }
+    await postPlugin(fromValues)
+      .catch(err => console.log(err));
+
+    if (!notify) {
+     window.location = "/plugins/" 
+    } else {
+      showToast();
+      save.textContent = 'Save settings'; 
+      save_notify.textContent = 'Save & notify';
+    }
+}
 
 </script>
 
