--- a/server/html/views/plugin.html
+++ b/server/html/views/plugin.html
@@ -95,9 +95,9 @@
           class="text-white ml-4 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg
           text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
             {{#if pluginSettings.enabled}}
-              Save & notify
+              Save & Send test notification
             {{else}}
-              Enable & notify
+              Enable & Send test notification
             {{/if}}
         </button>
       </div>
@@ -112,7 +112,7 @@
   <div class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-green-500 bg-green-100 rounded-lg dark:bg-green-100 dark:text-green-900">
       <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
   </div>
-  <div class="ml-3 text-sm font-normal">Save & send text notification</div>
+  <div class="ml-3 text-sm font-normal">Test notification sent</div>
   <button type="button" class="bg-transparent ml-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 inline-flex h-8 w-8 dark:text-green-900 dark:hover:text-black " onclick="hideToast()" aria-label="Close">
       <span class="sr-only">Close</span>
       <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
@@ -165,7 +165,7 @@
     } else {
       showToast();
       save.textContent = 'Save settings'; 
-      save_notify.textContent = 'Save & notify';
+      save_notify.textContent = 'Save & Send test notification';
     }
 }
 
