add hothost logo

--- a/server/html/layouts/main.html
+++ b/server/html/layouts/main.html
@@ -24,7 +24,10 @@
     <div class="container flex flex-wrap justify-between items-center mx-auto">
       <a href="/" class="flex items-center">
         <!-- <img src="/static/logo.svg" class="mr-3 h-6 sm:h-9" alt="HotHost Logo" /> -->
-        <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">🔥 HotHost</span>
+        <div class="flex text-xl font-semibold whitespace-nowrap dark:text-white">
+          <img class='h-9' src="/img/logo.svg" alt="logo">
+          <span class="my-auto pl-2">HotHost</span>
+        </div>
       </a>
 
       <button id="theme-toggle" type="button" class="text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5">
