--- a/server/html/views/home.html
+++ b/server/html/views/home.html
@@ -242,8 +242,8 @@ services:
                   {{/if}}
                 </p>
               </td>
-              <td>
-                <svg xmlns="http://www.w3.org/2000/svg" id="dropdownDots-{{@index}}" data-dropdown-toggle="dropdownDotsInfo-{{@index}}" data-dropdown-placement="bottom-end" class="h-6 w-6 text-gray-700 dark:text-gray-800 cursor-pointer" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+              <td class="pl-4">
+                <svg xmlns="http://www.w3.org/2000/svg" id="dropdownDots-{{@index}}" data-dropdown-toggle="dropdownDotsInfo-{{@index}}" data-dropdown-placement="bottom-end" class="h-6 w-6 text-gray-700 dark:text-gray-100 cursor-pointer" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M12 5v.01M12 12v.01M12 19v.01M12 6a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z" />
                 </svg>
                 <div id="dropdownDotsInfo-{{@index}}" class="z-10 hidden w-max bg-white shadow text-sm font-medium text-white rounded-lg transition-opacity duration-300 dark:bg-gray-700">
