--- a/server/html/views/plugin.html
+++ b/server/html/views/plugin.html
@@ -1,5 +1,5 @@
-<div class="container mx-auto flex justify-center ">
-  <div class="min-w-2/3 p-4 my-5 bg-gray-100 rounded-lg shadow-md sm:p-8 dark:bg-gray-600 dark:border-gray-700">
+<div class="container mx-auto px-4 flex justify-center ">
+  <div class="p-4 my-5 bg-gray-100 rounded-lg shadow-md sm:p-8 dark:bg-gray-600 dark:border-gray-700 mobile:container">
     
     
     <div class="flex justify-between items-center mb-5">
