--- a/server/html/views/plugins.html
+++ b/server/html/views/plugins.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto flex justify-center ">
+<div class="container mx-auto flex justify-center px-4">
   <div class="min-w-2/3 p-4 my-5 bg-gray-100 rounded-lg shadow-md sm:p-8 dark:bg-gray-600 dark:border-gray-700">
 
     <div class="flex justify-between items-center mb-5">
@@ -30,7 +30,7 @@
       </form>
       {{/if}} -->
     </div>
-    <div class="max-w-2/3 gap-x-10 gap-y-10 divide-gray-200 dark:divide-gray-700 flex flex-wrap">
+    <div class="max-w-2/3 gap-x-10 gap-y-10 justify-center divide-gray-200 dark:divide-gray-700 flex flex-wrap">
       {{#each plugins}}
         <div class="w-60 bg-white rounded-lg shadow-md dark:bg-gray-800 dark:border-gray-700 flex flex-col">
           <img class="w-40 h-40 my-6 mx-auto rounded-t-lg" src="{{ this.iconUrlOrBase64 }}" alt="product image" />
