--- a/server/html/views/users.html
+++ b/server/html/views/users.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto relative justify-center ">
+<div class="container px-4 mx-auto relative justify-center ">
     <div class="text-xs text-gray-700 border-b-2 rounded-t-lg border-gray-300 dark:border-gray-500 bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
         <button id="triggerCollapse" type="button" class="py-2.5 px-5 mx-4 my-4 text-sm font-medium text-white focus:outline-none bg-green-700 rounded-lg border border-gray-200  hover:bg-green-800 dark:focus:ring-gray-700 dark:bg-green-400 dark:text-gray-800 dark:border-gray-600 dark:hover:bg-green-500">
             + User
@@ -31,7 +31,7 @@
             </form>
         </div>
     </div>
-  <div class="relative overflow-x-auto shadow-md sm:rounded-b-lg">
+  <div class="relative overflow-x-auto shadow-md rounded-b-lg">
     <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
         <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
             <tr>
